force-app/main/default/objects/Account/fields/numlocations__c.field-meta.xml
<CustomField>
    <fullName>numlocations__c</fullName>
    <label>numlocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>