force-app/main/default/objects/Account/fields/Product_Names__c.field-meta.xml
<CustomField>
    <fullName>Product_Names__c</fullName>
    <label>Product Names</label>
    <length>252</length>
    <type>Text</type>
</CustomField>