force-app/main/default/objects/Account/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <formula>CASESAFEID($User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Field</label>
    <type>Text</type>
</CustomField>