force-app/main/default/objects/Account/fields/v__c.field-meta.xml
<CustomField>
    <fullName>v__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>v</label>
    <type>DateTime</type>
</CustomField>