force-app/main/default/objects/Account/recordTypes/KVP.recordType-meta.xml
<RecordType>
    <fullName>KVP</fullName>
    <active>true</active>
    <label>KVP</label>
</RecordType>