force-app/main/default/objects/Account/recordTypes/Non_Kvp.recordType-meta.xml
<RecordType>
    <fullName>Non_Kvp</fullName>
    <active>true</active>
    <label>Non Kvp</label>
</RecordType>